RESOLVED FIXED155997
REGRESSION (r198782): CGImageSourceUpdateData() is called twice with the same data every time ImageSource::setData() is called
https://bugs.webkit.org/show_bug.cgi?id=155997
Summary REGRESSION (r198782): CGImageSourceUpdateData() is called twice with the same...
Said Abou-Hallawa
Reported 2016-03-29 16:51:23 PDT
This bug causes logging an error message saying "CGImageSourceUpdateData image source was already finalized". When refactoring the code of ImageSource::setData(SharedBuffer* data), I moved its code to ImageDecoder::setData(SharedBuffer* data). And as a preparation for the asynchronous image decoding work, I added another ImageDecoder::setData(CFDataRef data), and I intended to call it from ImageDecoder::setData(SharedBuffer* data) for now and then I am going to call it also from the asynchronous image decoding code path. The bug is I left the old CGImageSourceUpdateData() in ImageDecoder::setData(SharedBuffer* data) after calling ImageDecoder::setData(CFDataRef data).
Attachments
Patch (1.53 KB, patch)
2016-03-29 17:12 PDT, Said Abou-Hallawa
no flags
Joseph Pecoraro
Comment 1 2016-03-29 17:04:42 PDT
Said Abou-Hallawa
Comment 2 2016-03-29 17:12:56 PDT
WebKit Commit Bot
Comment 3 2016-03-29 18:31:32 PDT
Comment on attachment 275157 [details] Patch Clearing flags on attachment: 275157 Committed r198818: <http://trac.webkit.org/changeset/198818>
WebKit Commit Bot
Comment 4 2016-03-29 18:31:36 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.