REGRESSION (r198782): CGImageSourceUpdateData() is called twice with the same data every time ImageSource::setData() is called https://bugs.webkit.org/show_bug.cgi?id=155997

Patch by Said Abou-Hallawa <sabouhallawa@apple.com> on 2016-03-29
Reviewed by Simon Fraser.

Remove a call to CGImageSourceUpdateData() which was mistakenly left in
ImageDecoder::setData() after ImageSource refactoring.

* platform/graphics/cg/ImageSourceCG.cpp:
(WebCore::ImageDecoder::setData):

Canonical link: https://commits.webkit.org/174117@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198818 268f45cc-cd09-0410-ab3c-d52691b4dbfc